test/corpus/do_statement.txt
========================================
Do while loop
========================================

fn main(): void {
  do {
    i += 1;
  } while i < n;
}

---

(source_file
  (item
    (fn_declaration
      (identifier)
      (parameters)
      (base_type
        (primitive_type))
      (block
        (statement
          (do_statement
            (block
              (statement
                (assignment_statement
                  (postfix_expr
                    (primary_expr
                      (identifier)))
                  (expression
                    (ternary_expr
                      (logical_or_expr
                        (logical_and_expr
                          (equality_expr
                            (relational_expr
                              (bitwise_or_expr
                                (bitwise_xor_expr
                                  (bitwise_and_expr
                                    (shift_expr
                                      (additive_expr
                                        (multiplicative_expr
                                          (unary_expr
                                            (postfix_expr
                                              (primary_expr
                                                (number)))))))))))))))))))
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (identifier))))))))))
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (identifier))))))))))))))))))))))
