test/corpus/for_statement.txt
========================================
C-style for loops
========================================

fn main(): void {
  for i = 0; i < n; ++i {
  }

  for var j = 0; j < n; ++j {
  }
}

---

(source_file
  (item
    (fn_declaration
      (identifier)
      (parameters)
      (base_type
        (primitive_type))
      (block
        (statement
          (for_statement
            (for_init
              (assignment_expression
                (postfix_expr
                  (primary_expr
                    (identifier)))
                (expression
                  (ternary_expr
                    (logical_or_expr
                      (logical_and_expr
                        (equality_expr
                          (relational_expr
                            (bitwise_or_expr
                              (bitwise_xor_expr
                                (bitwise_and_expr
                                  (shift_expr
                                    (additive_expr
                                      (multiplicative_expr
                                        (unary_expr
                                          (postfix_expr
                                            (primary_expr
                                              (number))))))))))))))))))
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (identifier))))))))))
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (identifier))))))))))))))))
            (for_update
              (expression
                (ternary_expr
                  (logical_or_expr
                    (logical_and_expr
                      (equality_expr
                        (relational_expr
                          (bitwise_or_expr
                            (bitwise_xor_expr
                              (bitwise_and_expr
                                (shift_expr
                                  (additive_expr
                                    (multiplicative_expr
                                      (unary_expr
                                        (unary_expr
                                          (postfix_expr
                                            (primary_expr
                                              (identifier))))))))))))))))))
            (block)))
        (statement
          (for_statement
            (for_init
              (for_var_declaration
                (identifier)
                (expression
                  (ternary_expr
                    (logical_or_expr
                      (logical_and_expr
                        (equality_expr
                          (relational_expr
                            (bitwise_or_expr
                              (bitwise_xor_expr
                                (bitwise_and_expr
                                  (shift_expr
                                    (additive_expr
                                      (multiplicative_expr
                                        (unary_expr
                                          (postfix_expr
                                            (primary_expr
                                              (number))))))))))))))))))
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (identifier))))))))))
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (identifier))))))))))))))))
            (for_update
              (expression
                (ternary_expr
                  (logical_or_expr
                    (logical_and_expr
                      (equality_expr
                        (relational_expr
                          (bitwise_or_expr
                            (bitwise_xor_expr
                              (bitwise_and_expr
                                (shift_expr
                                  (additive_expr
                                    (multiplicative_expr
                                      (unary_expr
                                        (unary_expr
                                          (postfix_expr
                                            (primary_expr
                                              (identifier))))))))))))))))))
            (block)))))))
