test/corpus/suffixed_numbers.txt
========================================
Suffixed numbers
========================================

fn main(): void {
  1u8;
  1i8;
  1u16;
  1i16;
  1u32;
  1i32;
  1u64;
  1i64;
  1f32;
  1f64;
  1uz;
  1iz;
}

---

(source_file
  (item
    (fn_declaration
      (identifier)
      (parameters)
      (base_type
        (primitive_type))
      (block
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))
        (statement
          (expression_statement
            (expression
              (ternary_expr
                (logical_or_expr
                  (logical_and_expr
                    (equality_expr
                      (relational_expr
                        (bitwise_or_expr
                          (bitwise_xor_expr
                            (bitwise_and_expr
                              (shift_expr
                                (additive_expr
                                  (multiplicative_expr
                                    (unary_expr
                                      (postfix_expr
                                        (primary_expr
                                          (suffixed_number
                                            (number)
                                            (number_type_suffix)))))))))))))))))))))))
